--- a/css/main.css
+++ b/css/main.css
@@ -55,33 +55,6 @@ body {
   word-break: break-word;
 }
 
-button {
-  background-color: #d84a38;
-  border: none;
-  border-radius: 2px;
-  color: white;
-  font-family: sans-serif;
-  font-size: 0.8em;
-  margin: 0 0 1em 0;
-  padding: 0.5em 0.7em 0.6em 0.7em;
-}
-
-button:active {
-  background-color: #cf402f;
-}
-
-button:hover {
-  background-color: #cf402f;
-}
-
-button[disabled] {
-  color: #ccc;
-}
-
-button[disabled]:hover {
-  background-color: #d84a38;
-}
-
 canvas {
   background-color: #ccc;
   max-width: 100%;
@@ -249,8 +222,9 @@ strong {
 
 video {
   background: #222;
-  margin: 0 0 20px 0;
-  width: 100%;
+   margin: 10px auto; 
+  width: 320px;
+  height:240px;
 }
 
 @media screen and (max-width: 650px) {
