--- a/css/main.css
+++ b/css/main.css
@@ -94,8 +94,8 @@ video {
 
 button {
   flex-grow: 1;
-  height: 3.5rem;
-  min-width: 2rem;
+  height: 3rem;
+  min-width: 10rem;
   border: none;
   border-radius: 0.15rem;
   background: #ed341d;
@@ -107,7 +107,7 @@ button {
   align-items: center;
   color:#ffffff;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 button:hover, button:focus {
   outline: none;
@@ -126,4 +126,8 @@ button:disabled {
 }
 button:first-child {
   margin-left: 0;
+}
+video{
+  width: 1280px;
+  height: 720px;
 }
